[gd_scene load_steps=2 format=1]

[ext_resource path="res://Login.gd" type="Script" id=1]

[node name="Login" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 634.0
margin/bottom = 273.0
script/script = ExtResource( 1 )

[node name="txt_user" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 36.0
margin/right = 432.0
margin/bottom = 60.0
text = "Account Username:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="user" type="LineEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 60.0
margin/right = 432.0
margin/bottom = 84.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="txt_pass" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 100.0
margin/right = 432.0
margin/bottom = 124.0
text = "Account Password:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pass" type="LineEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 33.0
margin/top = 124.0
margin/right = 433.0
margin/bottom = 148.0
placeholder/alpha = 0.6
secret = true
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="login" type="Button" parent="."]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
hint/tooltip = "Login to your account."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 182.0
margin/top = 56.0
margin/right = 32.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Log In"
flat = false

[connection signal="text_changed" from="user" to="." method="validateUser"]

[connection signal="text_entered" from="user" to="." method="onEnter"]

[connection signal="text_changed" from="pass" to="." method="validatePassword"]

[connection signal="text_entered" from="pass" to="." method="onEnter"]

[connection signal="pressed" from="login" to="." method="doLogin"]


